--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -14,8 +14,10 @@ html {
     outline-color: #32a1ce;
 }
 
-@view-transition {
-    navigation: auto;
+@media (prefers-reduced-motion: no-preference){
+    @view-transition {
+        navigation: auto;
+    }
 }
 
 .visually-hidden {
