--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -596,7 +596,7 @@ h1 {
 
 .h2,
 h2 {
-  font-size: 2.2em;
+  font-size: 2em;
   margin-bottom: 0.8em;
 }
 
@@ -1503,6 +1503,10 @@ body.color--flagBrown .c-footer {
   flex-flow: row wrap;
   gap: 0.5rem;
   font-size: 0.7em;
+}
+
+.c-keyword-list + address {
+  margin-top: 1em;
 }
 
 .c-keyword-list__item {
