--- a/priv/lib-src/style.scss
+++ b/priv/lib-src/style.scss
@@ -15,6 +15,7 @@
 @import "components.filters";
 @import "components.footer";
 @import "components.keyword-list";
+@import "components.list";
 @import "components.nav";
 @import "components.share-event";
 
