--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -367,6 +367,18 @@ body {
   --lightTheme: color-mix(in srgb, #FF575B, white 90%);
   --darkTheme: color-mix(in srgb, #FF575B, #242424 30%);
 }
+@media (prefers-dark-interface) {
+  body {
+    --lightTheme: color-mix(in srgb, #FF575B, #242424 90%);
+    --darkTheme: color-mix(in srgb, #FF575B, #242424 30%);
+  }
+  @supports (text-wrap: balance) {
+    body {
+      --lightTheme: color-mix(in srgb, var(--theme), var(--bodyBg) 90%);
+      --darkTheme: color-mix(in srgb, var(--theme), #242424 30%);
+    }
+  }
+}
 @supports (text-wrap: balance) {
   body {
     --lightTheme: color-mix(in srgb, var(--theme), var(--bodyBg) 90%);
