--- a/priv/lib-src/_settings.variables.scss
+++ b/priv/lib-src/_settings.variables.scss
@@ -72,7 +72,7 @@ body {
     --lightTheme: color-mix(in srgb, #FF575B, white 90%);
     --darkTheme: color-mix(in srgb, #FF575B, #242424 30%);
 
-    @media (prefers-dark-interface) { 
+    @media (prefers-color-scheme: dark) {
         --lightTheme: color-mix(in srgb, #FF575B, #242424 90%);
         --darkTheme: color-mix(in srgb, #FF575B, #242424 30%);
 
