--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1547,6 +1547,11 @@ body.color--flagBrown .c-footer {
   text-underline-offset: 1px;
   border: 1px solid #666;
 }
+@media (prefers-color-scheme: dark) {
+  .c-keyword-list__item {
+    background: color-mix(in srgb, #242424, #242424 90%);
+  }
+}
 @supports (text-wrap: balance) {
   .c-keyword-list__item {
     background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
