PE changes with many support queries

--- a/priv/lib-src/_components.filters.scss
+++ b/priv/lib-src/_components.filters.scss
@@ -49,6 +49,12 @@
     }
 }
 
+@supports not (color: color-mix(in srgb, red, white)) {
+    .c-filters__date {
+        display: none;
+    }
+}
+
 .c-filters__keywords {
     width: calc(100% - 5.5rem);
     position: relative;
