--- a/priv/lib-src/_components.keyword-list.scss
+++ b/priv/lib-src/_components.keyword-list.scss
@@ -14,6 +14,7 @@
     display: inline-flex;
     padding: 0.2rem 0.7rem;
     margin-bottom: 0.2rem;
+    background: #ccc;
     background: color-mix(in srgb, #242424, white 90%);
     border-radius: 4px;
     border: none;
