--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -484,10 +484,10 @@ html {
   display: block;
   position: relative;
   z-index: 1002;
-  background-color: white;
+  background-color: light-dark(white, #242424);
   font-size: 2rem;
   line-height: 2.6rem;
-  color: var(--primaryColor);
+  color: var(--typographyColor);
   text-align: center;
 }
 
