--- a/priv/lib-src/_template.edit.scss
+++ b/priv/lib-src/_template.edit.scss
@@ -1,5 +1,7 @@
 .t-edit {
     --typographyColor: #242424;
+    --lightTheme: #242424;
+    --darkTheme: #242424;
     padding: 3em 0;
     color: var(--typographyColor);
     font-family: var(--bodyFont);
